Fix footer alignment and color

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ footer {
 h4,
 .decorated-nav a {
   font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 13px;
+  font-size: 12px;
   color: #aaa;
   padding-bottom: 0;
   margin-bottom: 0;
@@ -155,13 +155,19 @@ footer .input-group {
 }
 
 .footer-bottom {
-  background-color: rgb(29,0,0);
+  background-color: rgb(34, 31, 31);
 }
 
 .details div {
   border: 1px solid lightgrey;
   border-radius: 2px;
   text-align: center;
+}
+
+.social-icons i,
+.copyright {
+  margin: 0 5px;
+  color: #aaa;
 }
 
 .red-bg { background-color: rgb(212, 87, 74); } 
